--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <img src="dollar.png" alt="dollar-sign">
   <title>HTML E-Commerce Project</title>
   <link rel="stylesheet" href="index.css">
   <nav>
