--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
   <nav>
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
+    <a href="listing.html">Listing</a>
   </nav>
 </head>
 <body>
