--- a/listing.html
+++ b/listing.html
@@ -9,24 +9,25 @@
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
     <a href="listing.html">Listing</a>
+
     <!--<a href="filepath">Name for link</a>-->
   </nav>
 </head>
 <body>
     <section>
-        <h1>Welcome to the E-Commerce Website</h1>
+        <h1>E-Commerce Website Product Listing</h1>
 
     </section>
     <section>
-      <h1>Here is a list of our products</h1>
+      <h1>Here is a list of our products and services</h1>
       <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>Watches</li>
+        <li>Groceries</li>
+        <li>Electronics</li>
+        <li>Jewelery</li>
+        <li>Books</li>
+        <li>Clothes</li>
+        <li>Returns</li>
       </ul>
     </section>
   
