--- a/about.html
+++ b/about.html
@@ -13,6 +13,9 @@
 <body>
     <section>
         <h1>Welcome to the E-Commerce Website, About Page</h1>
+        <p>Our company was founded by the genius mind of Aryan Advaita. He 
+          sought to bring everyday produ
+        </p>
 
     </section>
   
