--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <img src="dollar.png" alt="dollar-sign">
   <title>HTML E-Commerce Project</title>
   <link rel="stylesheet" href="index.css">
@@ -18,7 +19,10 @@
 
     </section>
     <section>
-      
+      <h3>At our company, we're commited to giving you, our consumer, the highest quality of products possible.</h3>
+      <p>In order to chek them out, head on over to our listing page. There you will find our 
+        full list of available products, along with links to purchase them.
+      </p>
     </section>
   
 </body>
