--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
     <section>
         <h1>Welcome to the E-Commerce Website, About Page</h1>
         <p>Our company was founded by the genius mind of Aryan Advaita. He 
-          sought to bring everyday produ
+          sought to bring everyday products to the masses at an affordable price.
         </p>
 
     </section>
