--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 
     </section>
     <nav>
+    <div>
+      <h2>Navigation Bar</h2>
+    </div>
     <a href="index.html">Home thing changed</a>
     <a href="about.html">About</a>
     <a href="listing.html">Listing</a>
